--- a/MiniWidgets/Info.plist
+++ b/MiniWidgets/Info.plist
@@ -14,5 +14,7 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.widgetkit-extension</string>
 	</dict>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 </dict>
 </plist>
