--- a/aniWidgets/Info.plist
+++ b/aniWidgets/Info.plist
@@ -17,5 +17,7 @@
     <array>
         <string>fetch</string>
     </array>
+    <key>UIUserInterfaceStyle</key>
+    <string>Light</string>
 </dict>
 </plist>
